# toolkitICL

./: .gitignore  .travis.yml  .travis_install_intel_opencl.sh  .zenodo.json  CMakeLists.txt  README.md  appveyor.yml
CMake/: FindOCLIcd.cmake
doc/: datatypes.md
include/: hdf5_io.hpp  main.hpp  ocl_dev_mgr.hpp  ocl_util.hpp  opencl_include.hpp  rapl.hpp  timer.hpp  util.hpp
misc/: make.sh
notebooks/: julia.ipynb  matlab.m  python2.ipynb  python3.ipynb
src/: CMakeLists.txt  filter.cl  hdf5_io.cpp  main.cpp  ocl_dev_mgr.cpp  rapl.cpp  test_kernel.cl
test/: CMakeLists.txt  copy_char.cpp  copy_double.cpp  copy_float.cpp  copy_int.cpp  copy_long.cpp  copy_short.cpp  copy_test.h  copy_test.jl  copy_uchar.cpp  copy_uint.cpp  copy_ulong.cpp  copy_ushort.cpp  output_test.cpp  parsing_test.cpp  repetition_test.cpp  timer.cpp
